2006-07-25  Johan Dahlin  <jdahlin@async.com.br>

	reviewed by: Henrique Romano  <henrique@async.com.br>

	* gazpacho-plugin/kiwiwidgets.xml:
	* kiwi/ui/gazpacholoader.py:
	* kiwi/ui/widgets/button.py:
	* tests/test_proxy.py:

	Add ProxyButton support, Fixes #2698

2006-07-21  Ronaldo Maia <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py: Add a converter for gdk.Pixmap. Fixes #2697
	* tests/test_datatypes.py: and some tests.

2006-07-17  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxywidget.py (validate): validate widget when force is True,
	even if not visible nor sensitive. Fixes #2682

2005-03-29  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	(ValidatableProxyWidgetMixin.set_invalid): 
	Set the background to red and set the tooltips if the fade is 
	disabled, fixes #2685

2006-07-13  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxywidget.py:
	* kiwi/ui/comboboxentry.py:
	* kiwi/ui/comboentry.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/gadgets.py:
	* kiwi/ui/icon.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/widgets/spinbutton.py:
	Fetch the right background color instead of hard coding it to white.
	Add a get_background() method to ValidatableProxyWidgetMixin.
	Fixes #2681 (Gustavo Barbieri)

2006-07-03  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py: Decimal does not allow leading/trailing spaces.

2006-06-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py: ProxyComboEntry extend ComboMixin. 
	Fixes #2656

2006-06-19  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py: Changes the way localeconv is retrived, so it gets
	checked and fixed if necessary, before using it.
	* tests/test_datatypes.py: Add some pickling tests. Fixes #2654
