@@ -1,3 +1,12 @@
+2006-08-02  Ali Afshar <aafshar@gmail.com>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/gadgets.py:
+	* kiwi/ui/widgets/entry.py:
+
+	DateEntry breaks when set invalid, fixes #2720.
+
 2006-07-25  Johan Dahlin  <jdahlin@async.com.br>
 
 	reviewed by: Henrique Romano  <henrique@async.com.br>
